     regression. [issue #1904, issue #2484]
   * Fallback `localtime_r()` and `gmtime_r()` for some platform builds where
     a `*_s()` variant was available was not handled correctly. [PR #2583]
   * A recently introduced `allow_killpower` did not actually work as an
     `ups.conf` flag (only as a protocol command). [issue #2605, PR #2606]

 - development iterations of NUT should now identify with not only the semantic
   version of a preceding release, but with git-derived information about the
   amount of iterations that followed (if available): the three-number "semver"
   would be seen on release snapshots, while other builds would expose the
   added components: one with the amount of commits on the main development
   trunk since the preceding release which are ancestors of the built code
   base, and in case of feature development branches -- another component
   with the amount of commits unique to this branch (which are not part of
   the development trunk). This allows to produce more relevant (monotonously
   growing) version identifiers for packages and similar artifacts, with more
   meaningful upgrades via development snapshots, eventually. A copy of the
   current version information would be embedded into "dist" archives as a
   `VERSION_DEFAULT` file. [#1949]

 - the `upsnotify()` common code introduced in recent NUT releases (integrating
   with service management frameworks, etc.) was a bit cryptic when it reported
   a *failure to notify* (e.g. when not running as a service currently), fixed
   now to report human-friendly text instead of internal enum codes. Follow-up
   to [issue #1590, PR #1777, PR #2136]

 - drivers, `upsd`, `upsmon`: reduce "scary noise" about failure to `fopen()`
   the PID file (which most of the time means that no previous instance of
   the daemon was running to potentially conflict with), especially useless
   since in recent NUT releases the verdicts from `sendsignal*()` methods